make new tranposition code work?